# Cracking-the-coding-interview

./: CMakeLists.txt  mLinkedList.h  mSearch.cpp  mSort.cpp  main.cpp  trial.cpp
Arrays_and_Strings/: Check_Permutation.cpp  Is_Unique.cpp  One_Away.cpp  Palindrome_Permutation.cpp  String_Compression.cpp
Linked_Lists/: Remove_Dups.cpp  Return_Kth_to_Last.cpp
Stacks_and_Queues/: mHeap.cpp  mQueue.h  mStack.h
