cmake_minimum_required(VERSION 3.21)
project(Crack_Code_Interview)

set(CMAKE_CXX_STANDARD 14)

add_executable(Crack_Code_Interview main.cpp Arrays_and_Strings/One_Away.cpp Arrays_and_Strings/String_Compression.cpp Arrays_and_Strings/Is_Unique.cpp Arrays_and_Strings/Check_Permutation.cpp trial.cpp mLinkedList.h Stacks_and_Queues/mHeap.h Stacks_and_Queues/mStack.h mSort.cpp mSearch.cpp Linked_Lists/Remove_Dups.cpp Arrays_and_Strings/Zero_Matrix.cpp Arrays_and_Strings/Rotate_Matrix.cpp Arrays_and_Strings/String_Rotation.cpp Arrays_and_Strings/URLify.cpp Arrays_and_Strings/Palindrome_Permutation.cpp Linked_Lists/Return_Kth_to_Last.cpp Stacks_and_Queues/mQueue.h)
